# android_device_essential_mata

./: .gitignore  Android.bp  Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  compatibility_matrix.xml  config.fs  device.mk  exthm_mata.mk  extract-files.sh  framework_compatibility_matrix.xml  framework_manifest.xml  lineage.dependencies  lineage.mk  lineage_mata.mk  manifest.xml  product.prop  proprietary-files-recovery.txt  proprietary-files.txt  proprietary-firmware.txt  setup-makefiles.sh  system.prop  system_ext.prop  system_prop.mk  vendor.prop  vendor_prop.mk
audio/: aanc_tuning_mixer.txt  audio_effects.conf  audio_effects.xml  audio_platform_info.xml  audio_policy_configuration.xml  audio_policy_volumes.xml  mixer_paths.xml  mixer_paths_dtp.xml  mixer_paths_skuk.xml  mixer_paths_tasha.xml  mixer_paths_tavil.xml  sound_trigger_platform_info.xml
bluetooth/: bdroid_buildcfg.h
bootctrl/: Android.bp
configs/: hdr_tm_config.xml  libnfc-brcm.conf  libnfc-nci.conf  libnfc-nxp.conf  msm_irqbalance.conf  powerhint.json  powerhint.xml  privapp-permissions-mata.xml  privapp-permissions-qti.xml  public.libraries.txt  qti_whitelist.xml  sec_config  sensor_def_qcomdev.conf  system_ext-privapp-permissions-qti.xml  thermal-engine.conf  thermal_info_config.json
devicesettings/: Android.bp  Android.mk  AndroidManifest.xml
dumpstate/: Android.bp  DumpstateDevice.cpp  DumpstateDevice.h  service.cpp
gnss/: GnssAdapter.cpp
gnsspps/: Android.mk  Makefile.am  configure.ac
gpt-utils/: Android.bp  gpt-utils.cpp
health/: Android.bp  CycleCountBackupRestore.cpp  CycleCountBackupRestore.h  Health.cpp  HealthService.cpp  LearnedCapacityBackupRestore.cpp  LearnedCapacityBackupRestore.h  android.hardware.health@2.0-service.mata.rc
ims/: logging.cpp
izat_api/: IzatRemoteApi.h  izat_remote_api.h
libhidl/: Android.bp  Android.mk
liblight/: Android.mk
libqti-perfd-client/: Android.bp  client.c  client.cpp
libsensor_vl53l0_tof_a/: Android.mk  InputEventReader.h  ProximitySensor.cpp  ProximitySensor.h  SensorBase.cpp  SensorBase.h  configuration.h  sensors.cpp  sensors.h
light/: Android.bp  Light.cpp  Lights.cpp  Lights.h  android.hardware.light-service.mata.rc  android.hardware.light@2.0-service.mata.rc  service.cpp
loc_api/: Android.mk
loc_net_iface/: LocNetIfaceAgps.cpp  LocNetIfaceAgps.h
location/: Android.mk  gps_vendor_product.mk
location/client_api/: LocationClientApiDoxygen.conf  Makefile.am  README  configure.ac  location-client-api.pc.in  mkclientapidoc.sh
location/client_api/inc/: LocationClientApi.h
location/client_api/src/: LCAReportLoggerUtil.cpp  LCAReportLoggerUtil.h  LocationClientApi.cpp  LocationClientApiImpl.cpp  LocationClientApiImpl.h  LocationClientApiLog.h
location/client_api_testapp/: Makefile.am  configure.ac  location_client_api_testapp.pc.in  main.cpp
location/integration_api/: LocationIntegrationApiDoxygen.conf  Makefile.am  configure.ac  location-integration-api.pc.in  mkintegrationapidoc.sh
location/integration_api/inc/: LocationIntegrationApi.h
location/integration_api/src/: LocationIntegrationApi.cpp  LocationIntegrationApiImpl.cpp  LocationIntegrationApiImpl.h
location/loc_api/loc_api_v02/: Android.bp  Android.mk  LocApiV02.cpp  LocApiV02.h  Makefile.am  configure.ac  loc-api-v02.pc.in  loc_api_sync_req.cpp  loc_api_sync_req.h  loc_api_v02_client.cpp  loc_api_v02_client.h  loc_api_v02_log.cpp  loc_api_v02_log.h  loc_util_log.h  location_service_v02.c  location_service_v02.h
location/location_api_msg_proto/src/: LocationApiMsg.cpp  LocationApiMsg.h  LocationApiPbMsgConv.cpp  LocationApiPbMsgConv.h  Makefile.am
location/location_hal_daemon/: LocHalDaemonClientHandler.cpp  LocHalDaemonClientHandler.h  LocationApiService.cpp  LocationApiService.h  Makefile.am  PowerEvtHandler.cpp  PowerEvtHandler.h  configure.ac  location-hal-daemon.pc.in  location_hal_initializer  main.cpp
location/ntrip-client-integration-api/: Makefile.am  NtripClientIntegrationApi.h  configure.ac  ntrip-client-integration-api-testlib.cpp  ntrip-client-integration-api-testlib.pc.in
location/qapi/: Makefile.am  configure.ac  location-qapi.pc.in
location/qapi/etc/: qapi.conf
location/qapi/inc/: qapi_location.h
location/qapi/src/: qapi_location.cpp
location/utils/loc_socket/: Android.mk  LocSocket.cpp  Makefile.am  configure.ac  loc-socket.pc.in
media/: media_codecs.xml  media_codecs_performance.xml  media_profiles.xml  media_profiles_V1_0.xml
power/: Android.bp  Android.mk  InteractionHandler.cpp  InteractionHandler.h  Power.cpp  Power.h  android.hardware.power@1.1-service.mata.rc  android.hardware.power@1.1-service.wahoo.rc  android.hardware.power@1.2-service.mata.rc  hint-data.c  hint-data.h  list.c  metadata-defs.h  metadata-parser.c  performance.h  power-8998.c  power-common.h  power-helper.c  power-helper.h  powerhintparser.c  powerhintparser.h  service.cpp  utils.c  utils.h
power-libperfmgr/: Android.bp  InteractionHandler.cpp  Power.cpp  Power.h  android.hardware.power@1.2-service.mata-libperfmgr.rc  android.hardware.power@1.3-service.mata-libperfmgr.rc  power-helper.c  service.cpp
powerstats/: Android.bp  android.hardware.power.stats@1.0-service.pixel.rc  android.hardware.power.stats@1.0-service.pixel.xml  service.cpp
rcs/: Android.bp  logging.cpp
remove_packages/: Android.mk
root/: init.mata.alt.rc  init.mata.diag.rc  init.mata.fingerprint.rc  init.mata.power_off_charging.rc  init.mata.ramdump.rc  init.mata.sensor.rc  init.mata.target.rc  init.mata.usb.rc  init.qcom.early_boot.sh  init.qcom.sh  ueventd.mata.rc
rootdir/: Android.mk
sepolicy/: attributes  boot_control_hal.te  cameraserver.te  device.te  essential.te  essential.x509.pem  essential_camera_app.te  essential_sidecar_app.te  file.te  file_contexts  fingerprintd.te  genfs_contexts  hal_camera_default.te  hal_fingerprint_default.te  hal_fingerprint_essential.te  hal_graphics_composer_default.te  hal_power_default.te  hal_sensors_default.te  hal_sidecar_essential_default.te  hal_usb_default.te  hal_wifi_default.te  hbtp_grip.te  hostapd.te  ims.te  (+22 more)
(+176 files in other folders)
